hphp/test/slow/coeffects/memo-error-2.php.expectf
Fatal error: This function can only be memoized using __PolicyShardedMemoize because it has policied context in %s on line 3
